# HPC-Sweep-Manager

./: .coverage  .gitignore  ARCHITECTURE.md  CLAUDE.md  DISTRIBUTED_QUICKSTART.md  DISTRIBUTED_REFACTORING.md  DISTRIBUTED_SWEEP_READINESS.md  FEEDBACK.md  LICENSE  Makefile  README.md  REFACTORING_PROGRESS.md  coverage.xml  current_complexity_analysis.json  current_dead_code_analysis.json  debug_remote_cancellation.py  pyproject.toml  pytest.ini  refactored_complexity.json  requirements.txt  test_train.py
docs/: FAILSAFE_USAGE.md  PROJECT_STRUCTURE.md  README.md  SYNC_GUIDE.md  code_analysis_guide.md
docs/api_reference/: README.md  compute_sources.md  job_manager.md  managers.md
docs/api_reference/hpc/: README.md
docs/api_reference/local/: README.md
docs/cli/: README.md
docs/testing/: test_progress_report.md
docs/user_guide/: COMPLETION_RUNS.md  HPC_EXECUTION.md  MULTI_CLUSTER.md  QUEUE.md  SSH_EXECUTION.md  getting_started.md
documentation/testing/: test_suite_user_guide.md
documentation/user_guide/: distributed_sweeps.md  getting_started.md
examples/: README.md  hsm_config.yaml  smoke_cli.sh  smoke_slurm.py  smoke_ssh_cli.sh  smoke_ssh_slurm_cli.sh  task_ids_example.txt  test_sweep.yaml  test_train.py
examples/simple_mlp/: README.md  hsm_config.yaml  main.py  requirements.txt  sweep_config.yaml  test_example.py
examples/simple_mlp/configs/: config.yaml
examples/simple_mlp/sweeps/: README.md  sweep.yaml  sweep_config.yaml
old_package/: README.md
old_package/docs/: README.md
old_package/docs/api_reference/local/: README.md
old_package/docs/user_guide/: getting_started.md
old_package/src/hpc_sweep_manager/cli/: common.py  distributed.py  hpc.py  local.py  monitor.py
old_package/src/hpc_sweep_manager/core/: __init__.py
old_package/src/hpc_sweep_manager/core/common/: completion.py  compute_source.py  config.py  config_parser.py  param_generator.py  path_detector.py
old_package/src/hpc_sweep_manager/core/hpc/: __init__.py  hpc_base.py  slurm_manager.py
old_package/src/hpc_sweep_manager/core/local/: __init__.py  manager.py
old_package/src/hpc_sweep_manager/core/remote/: __init__.py
old_package/src/hpc_sweep_manager/templates/: slurm_array.sh.j2  sweep_array.sh.j2
old_package/tests/: conftest.py
old_package/tests/unit/: test_hpc_managers.py
scripts/: analyze_codebase.py  sync-claude-state.sh
src/: V2_ROADMAP.md
src/hpc_sweep_manager/: __init__.py
src/hpc_sweep_manager/cli/: __init__.py  analyze.py  collect.py  configure.py  distributed.py  init.py  local.py  main.py  monitor.py  queue.py  remote.py  sweep.py  sync_commands.py
src/hpc_sweep_manager/core/: __init__.py  compute_source.py  config_parser.py  distributed_job_manager.py  distributed_sweep_wrapper.py  hsm_config.py  job_manager.py  local_compute_source.py  param_generator.py  path_detector.py  remote_discovery.py  remote_job_manager.py  ssh_compute_source.py  utils.py
src/hpc_sweep_manager/core/common/: __init__.py  base_manager.py  completion.py  compute_source.py  config.py  config_parser.py  param_generator.py  progress.py  resource_spec.py  sweep_analysis.py  sweep_orchestrator.py  sweep_tracker.py  templating.py  usage_tracker.py  utils.py
src/hpc_sweep_manager/core/distributed/: __init__.py  base_distributed_manager.py  distributed_compute_source.py  distributed_job_manager.py  distributed_manager.py  ditributed_manager.py  job_distributor.py  job_monitor.py  manager.py  result_collector.py  wrapper.py
src/hpc_sweep_manager/core/hpc/: __init__.py  pbs_manager.py  scheduler_queue.py  slurm_compute_source.py  slurm_manager.py  slurm_protocol.py
src/hpc_sweep_manager/core/local/: __init__.py  local_compute_source.py  local_manager.py  manager.py
src/hpc_sweep_manager/core/remote/: discovery.py  gpu_probe.py  manager.py  project_sync.py  push_exec.py  remote_manager.py  ssh_compute_source.py  ssh_slurm_compute_source.py
src/hpc_sweep_manager/sync/: __init__.py  config.py  sweep_sync.py  sync_manager.py  wandb_sync.py
src/hpc_sweep_manager/templates/: _conda_init.sh.j2  local_compute_source.sh.j2  local_job.sh.j2  remote_job.sh.j2  slurm_array.sh.j2  slurm_single.sh.j2  ssh_compute_source.sh.j2  sweep.yaml.j2  sweep_array.sh.j2  sweep_single.sh.j2
src/hsm/: __init__.py  __main__.py
src/hsm/cli/: __init__.py  config.py  main.py  monitor.py  sweep.py  utils.py
src/hsm/compute/: __init__.py  base.py  hpc.py  local.py  ssh.py
src/hsm/config/: __init__.py  hsm.py  sweep.py  validation.py
src/hsm/core/: README.md  __init__.py  engine.py  result_collector.py  sync_manager.py  tracker.py
src/hsm/utils/: __init__.py  common.py  logging.py  params.py  paths.py
tests/: __init__.py  conftest.py  test_core.py  test_count.py  test_full_functionality.py  test_sweep.yaml  test_sweep_direct.py
tests/cli/: test_config_cli.py  test_init_machine_config.py  test_main_cli.py  test_remote_clean.py  test_sweep_command.py
tests/fixtures/fake_nvidia_smi/: nvidia-smi
tests/fixtures/fake_slurm/: sbatch  scancel  sinfo  squeue
tests/integration/: test_distributed_compute_source_e2e.py  test_distributed_features.py  test_distributed_sweep_features.py  test_end_to_end_simple_mlp.py  test_local_compute_source_e2e.py  test_simple_mlp_documentation.py  test_simple_mlp_integration.py  test_slurm_compute_source_e2e.py  test_ssh_and_sync_features.py  test_sweep_orchestrator_e2e.py
tests/unit/: test_compute_source_creation.py  test_compute_source_creation_fix.py  test_compute_source_foundations.py  test_distributed_compute_source.py  test_distributed_manager.py  test_gpu_probe.py  test_hsm_config.py  test_local_compute_source.py  test_local_manager.py  test_parameter_generator.py  test_push_exec.py  test_remote_manager.py  test_resource_spec.py  test_scheduler_queue.py  test_simple_mlp_integration.py  test_slurm_compute_source.py  test_ssh_compute_source.py  test_ssh_compute_source_factory.py  test_ssh_connection.py  test_ssh_slurm_compute_source.py  test_sweep_config.py  test_sweep_orchestrator.py  test_templating.py
